<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?android:attr/colorBackground"
    android:gravity="center_vertical"
    android:orientation="vertical"
    app:flow_horizontalAlign="center">

    <ImageView
        android:id="@+id/intro_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/Intro_Image"
        android:src="@drawable/ic_intro_image_3"
        app:tint="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/intro_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/Title"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/intro_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="35dp"
        android:text="@string/Description"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp" />


</LinearLayout>