<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="8dp"
    tools:context=".Main.Activities.generalInfoActivity">

    <TextView
        android:id="@+id/teamTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/courgette"
        android:gravity="center"
        android:text="@string/the_team_title"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/liakosCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="15dp"
        app:cardCornerRadius="15dp"
        app:cardPreventCornerOverlap="true"
        app:contentPaddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/teamTitle"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/liakosImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img_elias_kordoulas"
                android:contentDescription="@string/Elias_Kodoulas_image" />

            <TextView
                android:id="@+id/liakosName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/liakos_name"
                android:textColor="@color/cocktail_crimson"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/liakosImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/liakosDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:text="@string/liakos_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/liakosImage"
                app:layout_constraintTop_toBottomOf="@+id/liakosName" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/AntonisCardView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="8dp"
        android:elevation="15dp"
        app:cardCornerRadius="15dp"
        app:cardPreventCornerOverlap="true"
        app:contentPaddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/AlketCardView"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/antonisImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img_antonis_papavasiliou"
                android:contentDescription="@string/Antonios_Papavasileiou_image" />

            <TextView
                android:id="@+id/antonisName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/antonis_name"
                android:textColor="@color/cocktail_blue"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/antonisImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/antonisDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/antonis_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/antonisImage"
                app:layout_constraintTop_toBottomOf="@+id/antonisName" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/AlketCardView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="8dp"
        android:elevation="15dp"
        app:cardCornerRadius="15dp"
        app:cardPreventCornerOverlap="true"
        app:contentPaddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/liakosCardView"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/alketImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img_alket_saliaj"
                android:contentDescription="@string/Alket_Saliaj_image" />

            <TextView
                android:id="@+id/alketName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/alket_name"
                android:textColor="@color/cocktail_yellow"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/alketImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/alketDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/alket_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/alketImage"
                app:layout_constraintTop_toBottomOf="@+id/alketName" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>