<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    app:cardElevation="5dp"
    app:cardCornerRadius="20dp"
    app:contentPadding="10dp"
    app:contentPaddingBottom="0dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    android:id="@+id/cardView">

    <RelativeLayout
        android:id="@+id/item"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/cocktailImage"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:transitionName="cocktail_recipe_transition"
            android:contentDescription="@string/image_of_the_cocktail" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cocktailImage"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/courgette"
            android:gravity="center_vertical"
            android:scrollbars="none"
            android:text="@string/Title"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:transitionName="cocktail_recipe_transition" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTextView"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/Description"
            android:textStyle="italic"
            android:textSize="15sp"
            android:maxLines="2"
            android:layout_toStartOf="@+id/imageButton"
            android:transitionName="cocktail_recipe_transition"
            android:scrollbars="none"/>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cocktailImage"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/icon_favorite_button_on"
            android:contentDescription="@string/favorites_button"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>